# Hotel-Booking-System

./: AddBookForm.cs  AddMagazineForm.cs  Book.cs  CMakeLists.txt  ISerializable.cs  LibraryItem.cs  LibraryLogger.cs  LibraryManager.cs  LibrarySystem.csproj  LibrarySystem.sln  Magazine.cs  MainForm.cs  Program.cs  README.md
include/GUI/: MainForm.h
include/Models/: Administrator.h  BookingRequest.h  Client.h  Person.h  Room.h
src/: main.cpp
src/GUI/: MainForm.cpp
src/GUI/qml/: AdminDashboard.qml  BookingForm.qml  LoginForm.qml  MaterialStyle.qml  RoomGrid.qml  main.qml
src/Models/: Administrator.cpp  BookingRequest.cpp  Client.cpp  Person.cpp  Room.cpp
